--- a/RoamAI/Views/Trip/RecommendationResult.cshtml
+++ b/RoamAI/Views/Trip/RecommendationResult.cshtml
@@ -67,44 +67,53 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <!-- Google Maps API script without the marker library -->
-<script src="https://maps.googleapis.com/maps/api/js?key=apikEY&callback=initMap" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=x&callback=initMap" async defer></script>
 
 <script>
     let selectedLocations = []; // Array to store selected locations
 
     function initMap() {
-        const mapOptions = {
-            zoom: 10,
-            center: { lat: 39.925533, lng: 32.866287 } // Default location (e.g., Ankara, Turkey)
-        };
-
-        const map = new google.maps.Map(document.getElementById("map"), mapOptions);
-
         // Fetch the location data as a plain string
         $.get(`/Trip/GetLocations?tripId=@ViewBag.TripId`, function (data) {
             const locations = data.split(";");
 
-            locations.forEach(locationStr => {
-                const [name, coordString] = locationStr.split("|");
-                const coords = parseCoordinates(coordString);
+            if (locations.length > 0) {
+                // Get the first location's coordinates
+                const firstLocationStr = locations[0];
+                const [, firstCoordString] = firstLocationStr.split("|");
+                const firstCoords = parseCoordinates(firstCoordString);
 
-                if (coords) {
-                    const marker = new google.maps.Marker({
-                        position: coords,
-                        map: map,
-                        title: name
-                    });
+                // Initialize the map with the first location's coordinates as center
+                const mapOptions = {
+                    zoom: 10,
+                    center: firstCoords ? firstCoords : { lat: 39.925533, lng: 32.866287 } // Default to Ankara if parsing fails
+                };
 
-                    // Info window with button to add location
-                    const infoContent = `<b>${name}</b><br>
-                            <button onclick="addLocation(${coords.lat}, ${coords.lng}, '${name}')">Bu konumu rota duraklarına ekle</button><br>
-                            <a href="https://www.google.com/maps/dir/?api=1&destination=${coords.lat},${coords.lng}" target="_blank">Tek Rota Oluştur</a>`;
+                const map = new google.maps.Map(document.getElementById("map"), mapOptions);
 
-                    const infoWindow = new google.maps.InfoWindow({ content: infoContent });
+                // Loop through locations to add markers
+                locations.forEach(locationStr => {
+                    const [name, coordString] = locationStr.split("|");
+                    const coords = parseCoordinates(coordString);
 
-                    marker.addListener("click", () => infoWindow.open(map, marker));
-                }
-            });
+                    if (coords) {
+                        const marker = new google.maps.Marker({
+                            position: coords,
+                            map: map,
+                            title: name
+                        });
+
+                        // Info window with button to add location
+                        const infoContent = `<b>${name}</b><br>
+                                <button onclick="addLocation(${coords.lat}, ${coords.lng}, '${name}')">Bu konumu rota duraklarına ekle</button><br>
+                                <a href="https://www.google.com/maps/dir/?api=1&destination=${coords.lat},${coords.lng}" target="_blank">Tek Rota Oluştur</a>`;
+
+                        const infoWindow = new google.maps.InfoWindow({ content: infoContent });
+
+                        marker.addListener("click", () => infoWindow.open(map, marker));
+                    }
+                });
+            }
         });
     }
 
@@ -179,7 +188,6 @@
         });
     });
 </script>
-
 <style>
     body {
         background-image: url('/images/travel9.png');
