--- a/RoamAI/Views/Welcome/Index.cshtml
+++ b/RoamAI/Views/Welcome/Index.cshtml
@@ -191,27 +191,20 @@
         <div class="developers-container d-flex justify-content-center gap-3">
             <div class="developer-card text-center">
                 <img src="/images/dev.png" class="rounded-circle mb-3" alt="Developer 1" />
-                <h5>-----</h5>
-                <p>Backend Developer</p>
+                <h5>Adem Özkayıt</h5>
+                <p>Fullstack Developer</p>
             </div>
 
             <div class="developer-card text-center">
                 <img src="/images/dev.png" class="rounded-circle mb-3" alt="Developer 2" />
-                <h5>-----</h5>
-                <p>Frontend Developer</p>
+                <h5>Ali Topal</h5>
+                <p>Fullstack Developer</p>
             </div>
 
             <div class="developer-card text-center">
                 <img src="/images/dev.png" class="rounded-circle mb-3" alt="Developer 3" />
-                <h5>----</h5>
-                <p>AI Specialist</p>
-            </div>
-        </div>
-
-        <div class="row mt-4">
-            <div class="col-md-12 text-center">
-                <a class="btn btn-outline-primary btn-lg mx-2" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
-                <a class="btn btn-outline-primary btn-lg mx-2" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
+                <h5>Melih Can Köse</h5>
+                <p>Fullstack Developer</p>
             </div>
         </div>
     </section>
