--- a/RoamAI/Views/Shared/_LoginPartial.cshtml
+++ b/RoamAI/Views/Shared/_LoginPartial.cshtml
@@ -37,17 +37,17 @@
     </li>
     <li class="nav-item">
         <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button id="logout" type="submit" class="nav-link btn btn-outline-primary nav-link mx-1">Logout</button>
+                <button id="logout" type="submit" class="nav-link btn btn-outline-primary nav-link mx-1" style="width: 100px;">Çıkış Yap</button>
         </form>
     </li>
 }
 else
 {
     <li class="nav-item">
-        <a class="btn btn-outline-primary nav-link mx-1" id="register" asp-area="Identity" asp-page="/Account/Register" width: 100px;">Register</a>
+            <a class="btn btn-outline-primary nav-link mx-1" id="register" asp-area="Identity" asp-page="/Account/Register" style="width: 100px;">Kayıt Ol</a>
     </li>
     <li class="nav-item">
-        <a class="btn btn-outline-primary nav-link mx-1" id="login" asp-area="Identity" asp-page="/Account/Login" width: 100px;">Login</a>
+            <a class="btn btn-outline-primary nav-link mx-1" id="login" asp-area="Identity" asp-page="/Account/Login" style="width: 100px;">Giriş Yap</a>
     </li>
 }
 </ul>
