--- a/RoamAI/Views/Trip/CreateTrip.cshtml
+++ b/RoamAI/Views/Trip/CreateTrip.cshtml
@@ -131,7 +131,7 @@
 
 else {
 
-
+    <partial name="_LoadingMessage" />
 <div class="travel-plan-card">
     <div class="card-header">
         <h2>Travel Planı Oluştur</h2>
